# AutoContractManager

./: .gitignore  README.md  main.py  pyproject.toml
config/: paths.py  settings.py
core/: database.py  document_generator.py  utils.py  validators.py
data/: contracts_registry.xlsx  database_of_contracts.xlsx
gui/windows/: contract_window.py  data_entry_window.py  edit_window.py  invoice_window.py
